[package]
name = "visualizer-coffee-api"
version = "0.1.0"
edition = "2021"
description = "Booster UKI manager"
license = "LGPL-3.0-or-later"
repository = "https://github.com/wadeduvall/visualizer-coffee-api"
keywords = ["visualizer.coffee", "espresso"]
categories = ["api-bindings"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = { version = "3.8.1", features = ["chrono_0_4"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -2 }
cargo = { level = "deny", priority = -3 }
style = { level = "deny", priority = -4 }
correctness = { level = "deny", priority = -5 }
complexity = { level = "warn", priority = -6 }
perf = { level = "warn", priority = -7 }
enum_glob_use = { level = "deny", priority = -8 }
unwrap_used = { level = "warn", priority = -9 }
expect_used = { level = "warn", priority = -10 }
suspicious = { level = "warn", priority = -11 }
multiple_crate_versions = "allow"
